[package]
name = "git-leave"
version = "1.7.0"
edition = "2024"
rust-version = "1.85.0"

description = "Check for unsaved or uncommitted changes on your machine"
repository = "https://github.com/mrnossiom/git-leave"
keywords = ["crawler", "git", "cli"]
categories = ["development-tools"]
license = "CECILL-2.1"

[dependencies]
clap = { version = "4", features = ["derive"] }
crossbeam = "0.8"
eyre = "0.6"
gix = { version = "0.75", default-features = false, features = ["status", "parallel"] }
gix-config = "0.48"
gix-discover = "0.43"
indicatif = "0.18"
label-logger = { version = "0.3", features = ["indicatif"] }
num_cpus = "1"
pariter = "0.5"

[lints]
[lints.rust]
unsafe_code = "forbid"
[lints.rustdoc]
all = "warn"
[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
# cargo = { level = "warn", priority = -1 }

unwrap_used = "warn"
